# service-locator-rs

./: Cargo.toml  README.md
benches/: criterion.rs
src/: error.rs  guard.rs  lib.rs  locator.rs
tests/: result_map.rs  simple_static.rs  threads_static.rs
